--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask
-Flask-Babel
-google-generativeai
-python-dotenv
+Flask==2.3.2
+Flask-Babel==2.0.0
+google-generativeai==0.5.4
+python-dotenv==1.0.0
+gunicorn==21.2.0
